fix deprecated integer code